# codename-terminal-player

./: .clang-format  .gitignore  CMakeLists.txt  README.md  toolchain.cmake
src/: main.c
